<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main9Activity"
    android:background="@drawable/gradient_background">>

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/a5_goaltitle"
        android:textColor="?attr/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:text="@string/a3_goaltime"
        app:layout_constraintBottom_toTopOf="@+id/textView48"
        app:layout_constraintStart_toStartOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="40dp"
        android:text="@string/a9_goaltimer"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/a9_break"
        android:background="@drawable/custom_button2"
        app:layout_constraintStart_toStartOf="@+id/textView51"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/a9_stopwatchtimer"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:text="@string/a3_goaltime"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView51"
        app:layout_constraintEnd_toStartOf="@+id/textView51"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/a9_focuslevel"
        app:layout_constraintEnd_toStartOf="@+id/textView52"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/a9_recentfocustime"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView51"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="183dp"
        android:layout_marginBottom="184dp"
        android:text="@string/Stat_day_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView50"
        app:layout_constraintStart_toStartOf="@+id/textView50"
        app:layout_constraintTop_toTopOf="@+id/textView49" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/custom_button"
        android:text="@string/a9_earlyattainment"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a9_whitenoise"
        tools:layout_editor_absoluteX="290dp"
        tools:layout_editor_absoluteY="34dp" />
</androidx.constraintlayout.widget.ConstraintLayout>