<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".Mainquickmeasuring">

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="92sp"
        android:textColor="@color/gray"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="52dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:onClick="onClickStart"
        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset"
        app:layout_constraintRight_toLeftOf="@+id/btn_reset"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="15dp"
        android:background="@color/red"
        android:onClick="onClickStop"
        android:text="@string/stop"
        android:textColor="@color/white"
        app:layout_constraintRight_toLeftOf="@+id/btn_start"
        app:layout_constraintTop_toBottomOf="@+id/btn_start"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="48dp"
        android:background="@color/orange"
        android:onClick="onClickReset"
        android:text="@string/reset"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />


</androidx.constraintlayout.widget.ConstraintLayout>